// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExplorerBilling.vue Should display button to start subscription 1`] = `
<div class="flex-grow-1 v-card v-sheet v-sheet--outlined theme--light">
  <div class="v-dialog__container">
    <!---->
  </div>
  <div class="v-card__text"><button type="button" class="v-btn v-btn--is-elevated v-btn--has-bg theme--light v-size--default primary"><span class="v-btn__content">Start Subscription</span></button></div>
</div>
`;

exports[`ExplorerBilling.vue Should display explorer billing status 1`] = `
<div class="flex-grow-1 v-card v-sheet v-sheet--outlined theme--light">
  <div class="v-dialog__container">
    <!---->
  </div>
  <div class="v-card__text">
    <div>Plan: <b>Explorer 500</b></div>
    <div>
      Status: <b class="success--text">Active</b>
      <!---->
    </div>
    <div>
      Monthly Transaction Quota:
      <b>10 / 20</b> (Resetting Aug. 28th)
    </div> <button type="button" class="mt-2 v-btn v-btn--is-elevated v-btn--has-bg theme--light v-size--default primary"><span class="v-btn__content">Update Plan</span></button>
    <!---->
  </div>
</div>
`;
